# my_brain

./: .easignore  .env.example  .gitignore  AGENT.md  AGENTS.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite-plugin-my-brain-storage.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
.cursor/: hooks.json
docs/: AI_BUILD_GUIDE.md  ARCHITECTURE.md  BRAIN_MCP.md  DEMO.md  KNOWLEDGE_OS_VISION.md  KOS_AGENT_TEAM_HARNESS.md  KOS_AGENT_TEAM_RUNBOOK.md  KOS_PRODUCTIZATION_PLAN.md  MOBILE_PRODUCT_PLAN.md  PROJECT_STATUS.md  SHOWCASE_MOCK_LIVE.md  UI_CONTRACT.md  V2_REAL_API_ACCEPTANCE.md  V2_VISUAL_SPEC.md  VISUAL_FEEDBACK.md
scripts/: brain-mcp-server.mjs  branch-protection-main.json  export-graph.mjs  register-ts-alias.mjs  resolve-ts-alias.mjs
specs/: A1-agent-core.md  A2-proposal-inbox.md  A3-morning-brief-job.md  A4-inbox-ui.md  A5-local-scheduler.md  B1-research-loop-job.md  B2-llm-research-extensions.md  B3-research-trace-view.md  C1-profile-driven-curation.md  C2-proactive-archive.md  C3-profile-growth-loop.md  C4-persona-engine.md  G1-graph-3d.md  H0-coverage-ratchet.md  H1-cost-guardrail.md  H2-ci-e2e-and-desktop.md  H3-memory-eval.md  KOS-A1-demo-fixtures.md  KOS-A2-core-loop.md  KOS-A3-undo-report.md  KOS-A4-github-surface.md  KOS-B1-world-item-model.md  KOS-B2-radar-signal.md  (+31 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
(+1019 files in other folders)
