[package]
name = "my-brain"
version = "0.1.0"
description = "Voice-first local AI companion with a self-updating brain graph"
authors = ["you"]
edition = "2021"

[lib]
name = "my_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
